--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -1,8 +1,14 @@
 server:
-  port: 7021
+  port: 5000
 
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/sleeve?characterEncoding=utf-8&serverTimezone=GMT%2B8
+    url: jdbc:mysql://127.0.0.1:3306/sleeve-api?characterEncoding=utf-8&serverTimezone=GMT%2B8
     username: root
     password: 123456
+#  打印 SQL
+#  jpa:
+#    properties:
+#      hibernate:
+#        show_sql: true
+#        format_sql: true
