--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,4 @@
 # todo\uFF1A\u6355\u83B7\u5F02\u5E38 week 12, \u4E71\u7801
 id.positive = id\u5FC5\u987B\u662F\u6B63\u6574\u6570
+
+token.password = \u8F93\u5165\u7684\u5BC6\u7801\u662F${validatedValue}, \u5BC6\u7801\u957F\u5EA6\u5728{min}\u4F4D\u5230{max}\u4F4D\u4E4B\u95F4
